--- a/TDIN_Proj2/src/index.html
+++ b/TDIN_Proj2/src/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+﻿<!DOCTYPE html>
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="utf-8" />
     <title>Hi mom</title>
-  </head>
-  <body>
-	<div id="renderer"></div>
-  </body>
+</head>
+<body>
+    <h1>Hi mom!</h1>
+</body>
 </html>
